--- a/september.css
+++ b/september.css
@@ -401,6 +401,14 @@ body {
       font-size: 33px;
       font-size: 3.3rem; } }
 
+.september h3 {
+  font-size: 21px;
+  font-size: 2.1rem; }
+  @media (min-width: 1024px) {
+    .september h3 {
+      font-size: 25px;
+      font-size: 2.5rem; } }
+
 .september p {
   margin-top: 0;
   font-size: 16px;
